recursion.cons.lessons.recursion.cons.ButNfirst.scala.error
butNfirst:7: error: type mismatch;
 found   : Int
 required: List[Int]
    return l.head
             ^