recursion.cons.lessons.recursion.cons.ButNfirst.scala.code
def butNfirst(l:List[Int], n:Int): List[Int] = {
  if (n==0) {
    return l
  } else if (l==Nil) {
    return l
  } else if (n==1) {
    return l.head
  } else return butNfirst(l.tail,n-1)
}